--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.454.0",
     "next": "^16.1.2",
     "next-themes": "^0.4.6",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
