feat(docs): add sheet, spinner and tooltip components documentation
- Create versioned documentation pages for sheet, spinner and tooltip components
- Add table of contents component for docs navigation
- Implement docs pager for previous/next navigation
- Generate docs config file with component versions
- Update build scripts to generate docs data
- Fix gradient class names in preview examples
- Mark sheet, spinner and tooltip as completed in todo list

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "generate-docs": "node scripts/generate-docs-data.mjs",
     "type:check": "npx tsc --noEmit --skipLibCheck",
-    "build": "npm run type:check && next build",
-    "dev": "next dev",
+    "build": "npm run generate-docs && npm run type:check && next build",
+    "dev": "npm run generate-docs && next dev",
     "lint": "eslint .",
     "start": "next start"
   },
