chore: update gitignore and add release documentation
feat: implement versioning strategy and distribution plan
docs: add versioning documentation and design system audit
build: add nova-setup script for installation and submodule management

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 # Misc
 .DS_Store
 *.pem
+example/
 
 # Debug
 npm-debug.log*
@@ -45,3 +46,5 @@ next-env.d.ts
 .idea
 *.swp
 *.swo
+example/*
+example
